--- a/prj.conf
+++ b/prj.conf
@@ -7,11 +7,6 @@ CONFIG_STDOUT_CONSOLE=y
 #CONFIG_FLASH_BASE_ADDRESS=0x180000
 #CONFIG_TEXT_SECTION_OFFSET=0x200
 
-CONFIG_SYS_LOG=y
-CONFIG_SYS_LOG_SHOW_COLOR=y
-CONFIG_SYS_LOG_SHOW_TAGS=y
-CONFIG_SYS_LOG_DEFAULT_LEVEL=3
-CONFIG_SYS_LOG_OVERRIDE_LEVEL=3
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_MAIN_STACK_SIZE=4096
 
@@ -24,3 +19,8 @@ CONFIG_FLASH=y
 
 
 CONFIG_XIP=n
+
+CONFIG_SHELL=y
+CONFIG_LOG=y
+CONFIG_LOG_STRDUP_MAX_STRING=128
+CONFIG_LOG_STRDUP_BUF_COUNT=16
