--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,8 @@ include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 project(NONE)
 
 target_sources(app PRIVATE src/main.c)
-target_sources(app PRIVATE src/dloader/cmd_download.c)
-target_sources(app PRIVATE src/dloader/dl_common.c)
-#target_sources(app PRIVATE src/dloader/dl_nand_operate.c)
 target_sources(app PRIVATE src/dloader/dl_stdio.c)
-target_sources(app PRIVATE src/dloader/sparse_crc32.c)
 target_sources(app PRIVATE src/dloader/dl_channel.c)
 target_sources(app PRIVATE src/dloader/dl_crc.c)
-target_sources(app PRIVATE src/dloader/packet.c)
-target_sources(app PRIVATE src/dloader/dl_cmd_proc.c)
-#target_sources(app PRIVATE src/dloader/dl_mtdparts.c)
-#target_sources(app PRIVATE src/dloader/dl_operate.c)
-#target_sources(app PRIVATE src/dloader/parsemtdparts.c)
-target_sources(app PRIVATE src/dloader/sparse_img.c)
+target_sources(app PRIVATE src/dloader/dl_packet.c)
+target_sources(app PRIVATE src/dloader/dl_command.c)
