--- a/prj.conf
+++ b/prj.conf
@@ -1,26 +1,20 @@
 # nothing here
 
 CONFIG_BOOT_BANNER=n
-#CONFIG_BUILD_TIMESTAMP=y
 CONFIG_STDOUT_CONSOLE=y
-#CONFIG_BOOTLOADER_MCUBOOT=y
-#CONFIG_FLASH_BASE_ADDRESS=0x180000
-#CONFIG_TEXT_SECTION_OFFSET=0x200
 
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_MAIN_STACK_SIZE=4096
 
 CONFIG_AON_UART_UWP=y
 
-
-CONFIG_FLASH=y
 #CONFIG_SOC_FLASH_UWP360=y
 #CONFIG_USE_UWP360_HAL_SFC=y
 
 
 CONFIG_XIP=n
 
-CONFIG_SHELL=y
-CONFIG_LOG=y
-CONFIG_LOG_STRDUP_MAX_STRING=128
-CONFIG_LOG_STRDUP_BUF_COUNT=16
+#CONFIG_SHELL=y
+#CONFIG_LOG=y
+#CONFIG_LOG_STRDUP_MAX_STRING=128
+#CONFIG_LOG_STRDUP_BUF_COUNT=16
