Implement flash write procedure.
Implement flash write procedure.

Signed-off-by: Dong Xiang <dong.xiang@unisoc.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.8)
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 project(NONE)
 
+zephyr_include_directories(src/dloader)
+
 target_sources(app PRIVATE src/main.c)
 target_sources(app PRIVATE src/dloader/dl_stdio.c)
 target_sources(app PRIVATE src/dloader/dl_channel.c)
