Disable log output by default.
To enable fdl log output, need 2 procedures:
 1. set below configs to y
 2. Change default console to UART_2 in file
		boards/arm/96b_ivy5661/96b_ivy5661.dts

Signed-off-by: Dong Xiang <dong.xiang@unisoc.com>

--- a/prj.conf
+++ b/prj.conf
@@ -4,9 +4,18 @@ CONFIG_XIP=n
 CONFIG_BOOT_BANNER=n
 CONFIG_STDOUT_CONSOLE=y
 
-CONFIG_AON_UART_UWP=y
-
 #CONFIG_SHELL=y
-CONFIG_LOG=y
-CONFIG_LOG_STRDUP_MAX_STRING=128
-CONFIG_LOG_STRDUP_BUF_COUNT=16
+#CONFIG_LOG=y
+#CONFIG_LOG_STRDUP_MAX_STRING=128
+#CONFIG_LOG_STRDUP_BUF_COUNT=16
+
+#To enable fdl log output, need 2 procedures:
+# 1. set below configs to y
+# 2. Change default console to UART_2 in file boards/arm/96b_ivy5661/96b_ivy5661.dts
+CONFIG_AON_UART_UWP=n
+CONFIG_PRINTK=n
+CONFIG_CONSOLE=n
+CONFIG_UART_CONSOLE=n
+
+CONFIG_WATCHDOG=n
+CONFIG_WDT_UWP=n
