fdl:src: fdl download ok
  fdl uart polling and write flash ok

Signed-off-by: yuanjiang.li <yuanjiang.li@unisoc.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ project(NONE)
 zephyr_include_directories(src/dloader)
 
 target_sources(app PRIVATE src/main.c)
-target_sources(app PRIVATE src/dloader/dl_stdio.c)
+target_sources(app PRIVATE src/dloader/dl_cmd_download.c)
+#target_sources(app PRIVATE src/dloader/dl_stdio.c)
 target_sources(app PRIVATE src/dloader/dl_channel.c)
 target_sources(app PRIVATE src/dloader/dl_crc.c)
 target_sources(app PRIVATE src/dloader/dl_packet.c)
-target_sources(app PRIVATE src/dloader/dl_command.c)
+target_sources(app PRIVATE src/dloader/dl_cmd_proc.c)
