--- a/prj.conf
+++ b/prj.conf
@@ -12,10 +12,10 @@ CONFIG_STDOUT_CONSOLE=y
 #To enable fdl log output, need 2 procedures:
 # 1. set below configs to y
 # 2. Change default console to UART_2 in file boards/arm/96b_ivy5661/96b_ivy5661.dts
-CONFIG_AON_UART_UWP=n
-CONFIG_PRINTK=n
-CONFIG_CONSOLE=n
-CONFIG_UART_CONSOLE=n
+CONFIG_AON_UART_UWP=y
+CONFIG_PRINTK=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 
 CONFIG_WATCHDOG=n
 CONFIG_WDT_UWP=n
