fdl:src:dloader: fdl download and run ok
    modify fdl erase flash align

Signed-off-by: yuanjiang.li <yuanjiang.li@unisoc.com>

--- a/prj.conf
+++ b/prj.conf
@@ -2,7 +2,10 @@
 
 CONFIG_XIP=n
 CONFIG_BOOT_BANNER=n
-CONFIG_STDOUT_CONSOLE=n
+
+#CONFIG_MBEDTLS=y
+#CONFIG_MBEDTLS_BUILTIN=y
+#CONFIG_MBEDTLS_CFG_FILE="config-mini-pbkdf2.h"
 
 #CONFIG_SHELL=y
 #CONFIG_LOG=y
@@ -16,6 +19,7 @@ CONFIG_AON_UART_UWP=n
 CONFIG_PRINTK=n
 CONFIG_CONSOLE=n
 CONFIG_UART_CONSOLE=n
+CONFIG_STDOUT_CONSOLE=n
 
 CONFIG_WATCHDOG=n
 CONFIG_WDT_UWP=n
